--- a/src/app/personnels/info-person/salary-brief/salary-brief.component.html
+++ b/src/app/personnels/info-person/salary-brief/salary-brief.component.html
@@ -5,7 +5,7 @@
   <form [formGroup]="formMain">
     <div class="action-form">
       <button (click)="onSave()">Ghi nhận</button>
-       <div *ngIf="message.condition && formNotValid == false" [ngClass]="'alert alert-'+ message.type">
+      <div *ngIf="message.condition && formNotValid == false" [ngClass]="'alert alert-'+ message.type">
         {{message.content}}
       </div>
     </div>
@@ -35,7 +35,7 @@
               <tr *ngFor="let item of listSalaryBrief.toArray();let i = index ">
                 <td>{{i+1}}</td>
                 <td>{{item.dateFrom | date:'dd/MM/yyyy'}}</td>
-                <td>{{item.dateEnd  | date:'dd/MM/yyyy'}}</td>
+                <td>{{item.dateEnd | date:'dd/MM/yyyy'}}</td>
                 <td>{{item.rank}}</td>
                 <td>{{item.level}}</td>
                 <td>{{item.factorSalary}}</td>
@@ -46,7 +46,7 @@
                 <td>
                   <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
                   <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove"></i></span>
-                <!--   <span class="action-icon" (click)="blockItem(i)"><i class="fa fa-lock"></i></span> -->
+                  <!--   <span class="action-icon" (click)="blockItem(i)"><i class="fa fa-lock"></i></span> -->
                 </td>
               </tr>
               <!---->
@@ -81,23 +81,36 @@
                     (change)="spieceChange()" required>
               <option *ngFor="let item of spieceRanks" [value]="item">{{item}}</option>
             </select>
+            <div class="error" *ngIf="!speice && formTouch  || speice && speice.trim()  =='' && formTouch">
+              Chưa chọn loại ngạch
+            </div>
           </div>
           <!---->
           <div class="item-control">
             <label>Nhóm ngạch </label>
-            <select class="form-control" formControlName="group" [(ngModel)]="group" (change)="groupChange()" required>
+            <select class="form-control" formControlName="group" [(ngModel)]="group"
+                    (change)="groupChange()" required>
               <option *ngFor="let item of listGroup" [value]="item.group.name">{{item.group.name}}</option>
             </select>
+            <div class="error" *ngIf="!group && formTouch||group && group.trim()  =='' && formTouch">
+              Chưa chọn nhóm ngạch
+            </div>
           </div>
 
           <div class="item-control">
             <label>Từ ngày </label>
-            <input type="date" formControlName="dateFrom"  required>
+            <input type="date" formControlName="dateFrom" #dateFrom required>
+            <div class="error" *ngIf="dateFrom.value.trim()  =='' && formTouch">
+              Chưa nhập từ ngày
+            </div>
           </div>
           <!---->
           <div class="item-control">
             <label>Đến ngày </label>
-            <input type="date" formControlName="dateEnd" required>
+            <input type="date" formControlName="dateEnd" required #dateEnd>
+            <div class="error" *ngIf="dateEnd.value.trim()  =='' && formTouch">
+              Chưa nhập đến ngày
+            </div>
           </div>
           <!---->
 
@@ -107,21 +120,32 @@
         <div class="col-xs-12 col-sm-6">
           <div class="item-control">
             <label>Ngạch </label>
-            <select class="form-control" [(ngModel)]="rank" formControlName="rank" (change)="rankChange()" required>
+            <select class="form-control" [(ngModel)]="rank" formControlName="rank"
+                    (change)="rankChange()" required>
               <option *ngFor="let item of listRank" [value]="item">{{item}}</option>
             </select>
+            <div class="error" *ngIf="!rank && formTouch|| rank && rank.trim()  =='' && formTouch">
+              Chưa chọn ngạch
+            </div>
           </div>
           <!---->
           <div class="item-control">
             <label>Bậc </label>
-            <select class="form-control" [(ngModel)]="levelChoise" formControlName="level" (change)="levelChange()" required>
+            <select class="form-control" [(ngModel)]="levelChoise" formControlName="level"
+                    (change)="levelChange()" required>
               <option *ngFor="let item of level" [value]="item.name">{{item.name}}</option>
             </select>
+            <div class="error" *ngIf="!levelChoise && formTouch||levelChoise && levelChoise.trim()  =='' && formTouch">
+              Chưa chọn bậc
+            </div>
           </div>
           <!---->
           <div class="item-control">
             <label> Số quyết định {{salary}} </label>
-            <input type="text" formControlName="numberDecide" required>
+            <input type="text" formControlName="numberDecide" required #numberDecide>
+            <div class="error" *ngIf="numberDecide.value.trim()  =='' && formTouch">
+              Chưa nhập số quyết định
+            </div>
           </div>
 
         </div>
