--- a/src/app/personnels/manager.component.html
+++ b/src/app/personnels/manager.component.html
@@ -4,20 +4,18 @@
 
 <div class="container">
 
-  <div id="app-menu-left">
-    <div class="app-menu-content">
+  <!--<div id="app-menu-left">-->
+    <!--<div class="app-menu-content">-->
 
-      <h4 class="app-menu-title-catalog">{{titleFeature}} </h4>
-      <app-menu-app [native]="native" [menus]="menu" id="menu-info"></app-menu-app>
-    </div>
-  </div>
-
+      <!--<h4 class="app-menu-title-catalog">{{titleFeature}} </h4>-->
+      <!--<app-menu-app [native]="native" [menus]="menu" id="menu-info1"></app-menu-app>-->
+    <!--</div>-->
+  <!--</div>-->
 
   <div id="app-menu-right">
     <ul class="menu-app">
       <app-menu-app [native]="native" [menus]="menu" id="menu-info"></app-menu-app>
     </ul>
-
   </div>
 
   <router-outlet></router-outlet>
